fix nbt data, added buttons like AE2, and search box have more functions.

--- a/src/main/resources/assets/ezstorage/lang/en_US.lang
+++ b/src/main/resources/assets/ezstorage/lang/en_US.lang
@@ -28,3 +28,14 @@ chat.msg.storagecore_not_found=Storage core cannot be found
 chat.msg.storagecore_out_of_range=Storage core is out of range
 key.categories.ezstorage=Simple Storage
 key.ezstorage.open_terminal=Open Storage Panel
+hud.msg.ezstorage.sort.mode.amount=Sort by: Amount
+hud.msg.ezstorage.sort.mode.name=Sort by: Name
+hud.msg.ezstorage.sort.mode.mod=Sort by: Mod
+hud.msg.ezstorage.sort.order.descending=Order: Descending
+hud.msg.ezstorage.sort.order.ascending=Order: Ascending
+hud.msg.ezstorage.search.mode.auto=Search: Auto
+hud.msg.ezstorage.search.mode.nei_sync=Search: NEI Synchronization
+hud.msg.ezstorage.search.mode.nei_standard=Search: NEI Standard
+hud.msg.ezstorage.search.mode.standard=Search: Standard
+hud.msg.ezstorage.savesearch.on=Save Search: ON
+hud.msg.ezstorage.savesearch.off=Save Search: OFF
